--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "oxygen-fonts-0.3.96.tar.xz": 212ccdb92528b95ee1e17b2f7aa2fc9c6acf527c
+  oxygen-fonts-0.4.0.tar.xz: c4bd89151876484e06ef6c49543b5bb746a0a659
