--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  oxygen-fonts-5.4.3.tar.xz: 328ef4ea6d9d579c92e065aab53aa2f435adaa08
+  master.tar.gz: b81a0ae280408971abe5153bf356f04a80a45d04
